sites/all/themes/fj16/sass/base/_fonts.scss
/* Generated by Font Squirrel (http://www.fontsquirrel.com) on October 12, 2014 */

@font-face {
    font-family: 'Exo2';
    src: url('../fonts/Exo2.0-Regular-webfont.eot');
    src: url('../fonts/Exo2.0-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Exo2.0-Regular-webfont.woff2') format('woff2'),
         url('../fonts/Exo2.0-Regular-webfont.woff') format('woff'),
         url('../fonts/Exo2.0-Regular-webfont.ttf') format('truetype'),
         url('../fonts/Exo2.0-Regular-webfont.svg#exo_2.0regular') format('svg');
    font-weight: 400;
    font-style: normal;
}


@font-face {
    font-family: 'Aleo';
    src: url('../fonts/Aleo-Regular-webfont.eot');
    src: url('../fonts/Aleo-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Aleo-Regular-webfont.woff') format('woff'),
         url('../fonts/Aleo-Regular-webfont.ttf') format('truetype'),
         url('../fonts/Aleo-Regular-webfont.svg#aleo') format('svg');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Aleo';
    src: url('../fonts/Aleo-Italic-webfont.eot');
    src: url('../fonts/Aleo-Italic-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Aleo-Italic-webfont.woff') format('woff'),
         url('../fonts/Aleo-Italic-webfont.ttf') format('truetype'),
         url('../fonts/Aleo-Italic-webfont.svg#aleo') format('svg');
    font-weight: 400;
    font-style: italic;
}

@font-face {
    font-family: 'Aleo';
    src: url('../fonts/Aleo-Bold-webfont.eot');
    src: url('../fonts/Aleo-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Aleo-Bold-webfont.woff') format('woff'),
         url('../fonts/Aleo-Bold-webfont.ttf') format('truetype'),
         url('../fonts/Aleo-Bold-webfont.svg#aleo') format('svg');
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: 'Aleo';
    src: url('../fonts/Aleo-BoldItalic-webfont.eot');
    src: url('../fonts/Aleo-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Aleo-BoldItalic-webfont.woff') format('woff'),
         url('../fonts/Aleo-BoldItalic-webfont.ttf') format('truetype'),
         url('../fonts/Aleo-BoldItalic-webfont.svg#aleo') format('svg');
    font-weight: 600;
    font-style: italic;
}

